# nomad-pedestrian-dynamics-extension

./: .gitignore  README.md  nomad.yaml  pyproject.toml
docs/: index.md
docs/concepts/: overview.md  plugin_types_and_data_processing.md  schemas.md
nomad-pedestrian-dynamics-extension/nomadparserexample/: parser.py
nomad_pedestrian_dynamics_extension/: __init__.py
nomad_pedestrian_dynamics_extension/nomadparserexampleMY/: nomad_plugin.yaml  parser.py
nomad_pedestrian_dynamics_extension/pedestrian_dynamics_app/: __init__.py  general.py
nomad_pedestrian_dynamics_extension/vadere_parser/: README.md  __init__.py  __main__.py  nomad_plugin.yaml  parser.py
nomad_pedestrian_dynamics_extension/vadere_parser/metainfo/: __init__.py  vadere.py
nomad_pedestrian_dynamics_extension/vadere_schema/: densities.py  macroscopic_quantities.py  microscopic_quantities.py  model.py  properties.py  results.py  scenario.py  simulation.py  trajectories.py  vaderesimulation.py
tests/: test_parser.py  test_vadere_parser.py
tests/data/: basic_2_density_discrete_ca_2024-08-05_12-33-49.69.tar.xz
tests/data/basic_2_density_discrete_ca_2024-08-05_12-33-49.69/: basic_2_density_discrete_ca.scenario  density.txt  out.txt  out1.txt  postvis.traj
tests/data/basic_2_density_discrete_ca_2024-09-23_15-52-24.887/: basic_2_density_discrete_ca.scenario  density.txt  out.txt  out1.txt  postvis.traj
tests/data/welcome_2024-08-06_14-09-25.311/: density.txt  postvis.traj  welcome.scenario
