[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'nomad_pedestrian_dynamics_extension'
version = '1.0'
description = 'Collection of NOMAD parsers for pedestrian dynamics structure codes'
readme = "README.md"
authors = [{ name = "Christina Maria Mayr" }]
license = { file = "LICENSE" }
dependencies = [
    "nomad-schema-plugin-run"
]

[project.urls]
homepage = "https://github.com/pedestrian-dynamics-HM/nomad-pedestrian-dynamics-extension"

[project.optional-dependencies]
dev = [
    'mypy==1.0.1',
    'pytest==3.10.0',
    'pytest-timeout==1.4.2',
    'pytest-cov==2.7.1',
    'astroid==2.11.7',
    'typing-extensions==4.4.0',
    'ruff==0.1.8'
]

infrastructure = [
    "mongoengine>=0.20",
    "pyjwt[crypto]==2.6.0",
    "structlog",
    "python-logstash==0.4.6",
    "pydantic>=1.10.8,<2.0.0",
    "fastapi<0.100",
    "elasticsearch==7.17.1",
    "elasticsearch-dsl==7.4.0",
    "zipstream-new==1.1.5",
]

[tool.ruff]
include = ["electronicparsers/*.py", "tests/*.py"]
lint.select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "PL", # pylint
]
lint.ignore = [
	"E501", # Line too long ({width} > {limit} characters)
	"E701", # Multiple statements on one line (colon)
	"E731", # Do not assign a lambda expression, use a def
	"E402", # Module level import not at top of file
	"PLR0911", # Too many return statements
	"PLR0912", # Too many branches
	"PLR0913", # Too many arguments in function definition
	"PLR0915", # Too many statements
	"PLR2004", # Magic value used instead of constant
	"PLW0603", # Using the global statement
	"PLW2901", # redefined-loop-name
	"PLR1714", # consider-using-in
	"PLR5501", # else-if-used
]
lint.fixable = ["ALL"]

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.format]
# use single quotes for strings.
quote-style = "single"

# indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.setuptools.packages.find]
include = ["nomad_pedestrian_dynamics_extension*"]

[tool.mypy]
strict = false
ignore_missing_imports = true
follow_imports = "silent"
no_strict_optional = true
disable_error_code = "import, annotation-unchecked"

[project.entry-points.'nomad.plugin']
vadereparser = "nomad_pedestrian_dynamics_extension:vadere_parser_entry_point"
vadereschema = "nomad_pedestrian_dynamics_extension:vadere_schema_entry_point"
